--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,5 @@
 body {
-    background-image:url(../imgs/corkboard.png);
+    background-image:url(../imgs/corkboard3.png);
     background-repeat:repeat;
     height: 100%;
 }
