--- a/css/base.css
+++ b/css/base.css
@@ -8,10 +8,16 @@ body {
     position: relative;
 }
 
-.pin {
+.pin-in {
     position:absolute;
     top:-17px;
     left:-10px;
+}
+
+.pin-out {
+    position:absolute;
+    top:-35px;
+    left:-25px;
 }
 
 .popover-title {
@@ -20,4 +26,20 @@ body {
 
 .show-hand {
     cursor: pointer;
+}
+
+.bootbox {
+    width: 330px;
+}
+
+.zip-search {
+    padding: 4px 8px;
+    margin-bottom: 0;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 13px;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-border-radius: 0px, 5px, 5px, 0px;
+     -moz-border-radius: 0px, 5px, 5px, 0px;
+          border-radius: 0px, 5px, 5px, 0px;
 }
