--- a/css/base.css
+++ b/css/base.css
@@ -43,3 +43,20 @@ body {
      -moz-border-radius: 0px, 5px, 5px, 0px;
           border-radius: 0px, 5px, 5px, 0px;
 }
+
+.modal-main-col {
+    float: left;
+    overflow-x: hidden;
+    overflow-y: auto;
+    margin: 0px;
+    min-height: 20px;
+    padding: 6px 12px 12px;
+    width: 472px;
+}
+
+.modal-sidebar {
+    float: right;
+    padding: 6px 12px 12px 0px;
+    width: 170px;
+    overflow: hidden;
+}
