--- a/css/base.css
+++ b/css/base.css
@@ -96,3 +96,29 @@ textarea {
     min-height: 18px;
     font-weight: bold;
 }
+
+.custom-label-cube {
+    height: 30px;
+    padding: 1px 5px;
+    width: 24px;
+}
+
+.green-label {
+    background-color: rgb(52,178,125);
+}
+
+.orange-label {
+    background-color: rgb(224,153,82);
+}
+
+.purple-label {
+    background-color: rgb(153,51,204);
+}
+
+.red-label {
+    background-color: rgb(203,77,77);
+}
+
+.blue-label {
+    background-color: rgb(77,119,203);
+}
