--- a/css/base.css
+++ b/css/base.css
@@ -51,13 +51,13 @@ body {
     margin: 0px;
     min-height: 20px;
     padding-bottom: 7px;
-    width: 360px;
+    width: 340px;
 }
 
 .modal-sidebar {
     float: right;
     padding-bottom: 7px;
-    width: 270px;
+    width: 290px;
     overflow: hidden;
 }
 
@@ -95,10 +95,11 @@ textarea {
     color: rgb(57,57,57);
     min-height: 18px;
     font-weight: bold;
+    margin-bottom: 8px;
 }
 
 .label-title {
-    width: 150px;
+
 }
 
 .custom-label-cube {
