changed filter & sort styles to match video

--- a/css/base.css
+++ b/css/base.css
@@ -167,8 +167,8 @@ textarea {
 }
 
 #allFilter {
-    color: #ffffff;
-    background-color: rgb(40,40,40);
+    color: rgb(40,40,40);
+    background-color: #ffffff;
 }
 
 #allFilter:hover {
